--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ greenlet==1.1.3.post0
 idna==3.4
 importlib-metadata==5.0.0
 importlib-resources==5.10.0
+kafka-python==2.0.2
 Mako==1.2.3
 MarkupSafe==2.1.1
 multidict==6.0.2
