--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ attrs==22.1.0
 Babel==2.9.1
 certifi==2022.9.24
 charset-normalizer==2.1.1
+cryptography==38.0.3
 frozenlist==1.3.1
 greenlet==1.1.3.post0
 idna==3.4
