--- a/requirements.txt
+++ b/requirements.txt
@@ -8,20 +8,37 @@ async-timeout==4.0.2
 attrs==22.1.0
 Babel==2.9.1
 certifi==2022.9.24
+cffi==1.15.1
 charset-normalizer==2.1.1
+contourpy==1.0.6
 cryptography==38.0.3
+cycler==0.11.0
+fonttools==4.38.0
 frozenlist==1.3.1
+graphviz==0.20.1
 greenlet==1.1.3.post0
 idna==3.4
 importlib-metadata==5.0.0
 importlib-resources==5.10.0
 kafka-python==2.0.2
+kiwisolver==1.4.4
 Mako==1.2.3
 MarkupSafe==2.1.1
+matplotlib==3.6.2
 multidict==6.0.2
+networkx==3.0
+numpy==1.24.0
+packaging==23.0
+pandas==1.5.2
+Pillow==9.4.0
+pycparser==2.21
 pydantic==1.10.2
+pydot==1.4.2
 PyMySQL==1.0.2
+pyparsing==3.0.9
+python-dateutil==2.8.2
 pytz==2022.4
+six==1.16.0
 SQLAlchemy==1.4.41
 typing_extensions==4.4.0
 yarl==1.8.1
